[package]
name = "jlea"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
once_cell = "1.17"
reqwest = { version = "0.11", features = ["json", "gzip", "stream", "blocking", "rustls-tls"] }
scraper = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.28", features = ["full"] }

mysql = "23.0"
chrono = "0.4"
log  = "0.4"
futures = "0.3"
env_logger = "0.9"